@startuml

  skinparam linetype ortho


    ToDoList.Main "1" -- "many" ToDoList.MenuText : MenuText
    ToDoList.Task o-- ToDoList.Project : aggregation
    ToDoList.Main -- ToDoList.Menu : Menu
    ToDoList.Main -- ToDoList.Project : Project
    ToDoList.Main "1" -- "many" ToDoList.Task : contains
    ToDoList.Menu -- ToDoList.MenuText : MenuText

title __TODOLIST's Class Diagram__\n

  namespace ToDoList {
    class ToDoList.Main {
        {static} + main()
    }
  }

  

  namespace ToDoList {
    class ToDoList.Menu {
        + addTaskData()
        + editTasks()
        + showTasks()
    }
  }

  namespace ToDoList {
      class ToDoList.Task {
          ~ dueDate : String
          ~ status : String
          ~ title : String
          + Task()
          + Task()
          + getDueDate()
          + getProject()
          + getStatus()
          + getTitle()
          + setDueDate()
          + setProject()
          + setStatus()
          + setTitle()
      }
    }

  namespace ToDoList {
        class ToDoList.Project {
            ~ name : String
            + Project()
            + Project()
            + getName()
            + setName()
        }
      }

  namespace ToDoList {
    class ToDoList.MenuText {
        ~ menuOptionsText : String
        ~ selectOption1 : String
        ~ selectOption2 : String
        ~ selectOption3 : String
        ~ selectOption4 : String
        ~ selectOption5 : String
        ~ selectOption6 : String
        ~ selectOption7 : String
        ~ taskListHeadingText : String
        ~ welcomeText : String
        + MenuText()
        + getMenuOptionsText()
        + getSelectOption1()
        + getSelectOption2()
        + getSelectOption3()
        + getSelectOption4()
        + getSelectOption5()
        + getSelectOption6()
        + getSelectOption7()
        + getTaskListHeadingText()
        + getWelcomeText()
        + setSelectOption1()
        + setSelectOption2()
        + setSelectOption3()
        + setSelectOption4()
        + setSelectOption5()
        + setSelectOption6()
        + setSelectOption7()
    }
  }
  


  













right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
